# cpp_mem_leak_check

./: .gitignore  README.md
cpp_abort_with_backtrace/: README.md  main.cpp
method_vld/: CMakeLists.txt
method_windows_crt/: README.md
methold_valgrind/: README.md  main.cpp
methold_vld/: README.md
methold_windows_crt/: main.cpp
statitic_mem_usage/: CMakeLists.txt  README.md  main.cpp  mem_manage.cpp  mem_manage.hpp
