CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET (TARGET_NAME testapp_mem)
PROJECT(${TARGET_NAME})

MESSAGE(STATUS "==================================")
MESSAGE(STATUS "Start:${TARGET_NAME}")

ADD_DEFINITIONS(-std=c++11)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
	)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC_FILES)

FILE(GLOB_RECURSE HEADER_FILES  *.h *.hpp)
SOURCE_GROUP("Include" FILES ${HEADER_FILES})

ADD_EXECUTABLE(${TARGET_NAME} ${HEADER_FILES} ${SRC_FILES})
